Practise CSS Absolute & Sticky positioning

--- a/positioning/index.html
+++ b/positioning/index.html
@@ -15,11 +15,27 @@
         </div>
     </section>
 
-    <!-- Relative Positioning (Default) - Relative to current position -->
+    <!-- Relative Positioning - Relative to current position -->
     <section class="relative-pos">
+        <div class="wrapper">
+            <div class="elm" style="position: absolute; left: 80px;">aaaaaa</div>
+        </div>
+    </section>
+
+    <!-- Absolute Positioning - Relative to Relative parent position -->
+    <section class="absolute-pos">
         <div class="wrapper">
             <div class="elm"></div>
         </div>
     </section>
+
+    <!-- Sticky Positioning - Initially Relative and fixed at position when scrolled -->
+    <section class="sticky-pos">
+        <div class="wrapper">
+            <div class="elm"></div>
+        </div>
+    </section>
+    <!-- Add more static elements below to see the effect -->
+    
 </body>
 </html>
