--- a/selectors/index.html
+++ b/selectors/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Selectors Practise</title>
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="styles3.css">
 </head>
 <body>
     <div class="box"></div>
     <span class="box">as</span>
-    <div class="box" id="boxId"></div>
+    <div class="box" id="boxId">aa</div>
     <span class="box">as</span>
-    <div class="box" aria-label="box" style="background-color: blueviolet;"></div>
+    <div class="box" aria-label="box" style="background-color: blueviolet;">aa</div>
     <div class="box" aria-label="box"></div>
     <div class="box">
         <div class="box"></div>
