Practise Absolute, Fixed and Sticky CSS positioning

--- a/positioning/index.html
+++ b/positioning/index.html
@@ -18,12 +18,19 @@
     <!-- Relative Positioning - Relative to current position -->
     <section class="relative-pos">
         <div class="wrapper">
-            <div class="elm" style="position: absolute; left: 80px;">aaaaaa</div>
+            <div class="elm" style="position: absolute; left: 30px;">aaaaaa</div>
         </div>
     </section>
 
     <!-- Absolute Positioning - Relative to Relative parent position -->
     <section class="absolute-pos">
+        <div class="wrapper">
+            <div class="elm"></div>
+        </div>
+    </section>
+
+    <!-- Fixed Positioning - Always stays there -->
+    <section class="fixed-pos">
         <div class="wrapper">
             <div class="elm"></div>
         </div>
@@ -36,6 +43,5 @@
         </div>
     </section>
     <!-- Add more static elements below to see the effect -->
-    
 </body>
 </html>
