Practise basic CSS selectors

--- a/positioning/Jun20_2022/index.html
+++ b/positioning/Jun20_2022/index.html
@@ -15,3 +15,7 @@
     <div class="box static"></div>
 </body>
 </html>
+
+
+<!-- Tried static positioning as separate element and also a flex item
+Next: Try both with relative position -->
