Add next topics to be covered

--- a/animations/Jun22_2022/index.html
+++ b/animations/Jun22_2022/index.html
@@ -11,3 +11,8 @@
     <div class="box"></div>
 </body>
 </html>
+
+<!-- Basic animation using absolute positioning and transition
+Next: 
+- Check why transfrom is better to animate than position
+- Understand Repaint Vs Reflow -->
