Tried injecting content to element to induce jitterness

--- a/animations/Aug3_10_2022/index.html
+++ b/animations/Aug3_10_2022/index.html
@@ -10,5 +10,6 @@
 <body>
     <div class="box relative"></div>
     <div class="box transform"></div>
+    <script src="app.js"></script>
 </body>
 </html>
