--- a/animations/Aug3-10-17_2022/index.html
+++ b/animations/Aug3-10-17_2022/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animations</title>
+    <title>Creating & fixing jittery animations</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="box relative"></div>
     <div class="box transform"></div>
+    <div class="box absolute"></div>
     <script src="app.js"></script>
 </body>
 </html>
