--- a/challenges/loading_cube/index.html
+++ b/challenges/loading_cube/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="cube">
-        <div class="cube-face cube-front"></div>
-        <div class="cube-face cube-back"></div>
-        <div class="cube-face cube-left"></div>
-        <div class="cube-face cube-right"></div>
-        <div class="cube-face cube-top"></div>
-        <div class="cube-face cube-bottom"></div>
-    </div>
+    <div class="scene">
+        <div class="cube">
+            <div class="cube-face cube-front"></div>
+            <div class="cube-face cube-back"></div>
+            <div class="cube-face cube-left"></div>
+            <div class="cube-face cube-right"></div>
+            <div class="cube-face cube-top"></div>
+            <div class="cube-face cube-bottom"></div>
+        </div>
+    </div>    
 </body>
 </html>
