--- a/challenges/pyramid_with_sun/index.html
+++ b/challenges/pyramid_with_sun/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pyramids with Sun & Moon</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- CSS challenge Day #3 -->
 </head>
 <body>
     <div class="container">
