--- a/challenges/pyramid_with_sun/index.html
+++ b/challenges/pyramid_with_sun/index.html
@@ -12,6 +12,7 @@
     <div class="container">
         <div class="sun"></div>
         <div class="pyramid"></div>
+        <div class="shadow"></div>
         <div class="ground"></div>
     </div>
 </body>
