--- a/animations/loaders/inline-circle/inline-circle-1.html
+++ b/animations/loaders/inline-circle/inline-circle-1.html
@@ -13,8 +13,30 @@
         }
 
         .loader {
+            box-sizing: border-box;
+            width: 5px;
+            height: 5px;
+            margin: 20px auto;
             border-radius: 50%;
-            box-shadow: 10px 0 0 10px, 50px 20px 10px 20px;
+            animation: bubbling 2s linear infinite;
+        }
+
+        @keyframes bubbling {
+            0% {
+                box-shadow: -21px 0 0 2px, -7px 0 0 1px, 7px 0 0 1px, 21px 0 0 1px;
+            }
+            25% {
+                box-shadow: -21px 0 0 1px, -7px 0 0 2px, 7px 0 0 1px, 21px 0 0 1px;
+            }
+            50% {
+                box-shadow: -21px 0 0 1px, -7px 0 0 1px, 7px 0 0 2px, 21px 0 0 1px;
+            }
+            75% {
+                box-shadow: -21px 0 0 1px, -7px 0 0 1px, 7px 0 0 1px, 21px 0 0 2px;
+            }
+            100% {
+                box-shadow: -21px 0 0 1px, -7px 0 0 1px, 7px 0 0 1px, 21px 0 0 1px;
+            }
         }
     </style>
 </head>
