--- a/animations/buttons/hamburger_menu/index.html
+++ b/animations/buttons/hamburger_menu/index.html
@@ -8,15 +8,33 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button class="burger-menu">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-    </button>
+    <h1>Animated hamburger buttons</h1>
+    <div class="container">
+        <div class="box">
+            <button class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </button>
+        </div>
+        <div class="box">
+            <button class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </button>
+        </div>
+        <div class="box">
+            <button class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </button>
+        </div>
+    </div>
     <script>
         const button = document.getElementsByClassName('burger-menu')[0];
         button.addEventListener('click', (event) => {
-            // console.log('clicking', event, event.target)
             button.classList.toggle('open');
         });
     </script>
