--- a/animations/misc/plant_with_leaves/index.html
+++ b/animations/misc/plant_with_leaves/index.html
@@ -10,6 +10,8 @@
 <body>
     <section class="container">
         <div class="plant">
+            <div class="leaf-left"></div>
+            <div class="leaf-right"></div>
         </div>
         <div class="ground"></div>
     </section>
