--- a/challenges/animated_typo/index.html
+++ b/challenges/animated_typo/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="frame">
         <div class="circle"></div>
-        <div class="horizontal-line"></div>
+        <div class="hl-line-left"></div>
+        <div class="hl-line-right"></div>
     </div>
 </body>
 </html>
