Done bracket animation

--- a/challenges/animated_typo/index.html
+++ b/challenges/animated_typo/index.html
@@ -12,6 +12,8 @@
         <div class="circle"></div>
         <div class="hl-line-left"></div>
         <div class="hl-line-right"></div>
+        <div class="bracket-left"></div>
+        <div class="bracket-right"></div>
     </div>
 </body>
 </html>
