--- a/challenges/animated_typo/index.html
+++ b/challenges/animated_typo/index.html
@@ -14,6 +14,9 @@
         <div class="hl-line-right"></div>
         <div class="bracket-left"></div>
         <div class="bracket-right"></div>
+        <div class="main-heading">Moments</div>
+        <div class="top-heading">Collect</div>
+        <div class="bottom-heading">Not things</div>
     </div>
 </body>
 </html>
