--- a/animations/buttons/hamburger_menu/index.html
+++ b/animations/buttons/hamburger_menu/index.html
@@ -31,6 +31,27 @@
                 <div class="bar"></div>
             </button>
         </div>
+        <div class="box">
+            <button class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </button>
+        </div>
+        <div class="box">
+            <button class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </button>
+        </div>
+        <div class="box">
+            <button class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </button>
+        </div>
     </div>
     <script>
         // Doesn't work - event.target is different while clicking .bar
