Add multiple product cards with animation

--- a/ui/product-card/index.html
+++ b/ui/product-card/index.html
@@ -5,12 +5,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern product cards</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Product card 1 -->
     <div class="card">
-        <div class="card--front"></div>
-        <div class="card--back"></div>
+        <div class="card--front">
+            <img class="front--img" src="./assets/women.jpeg" alt="Product Image 2">
+            <div class="front--price">$900</div>
+        </div>
+        <div class="card--back">
+            <div class="card--content">
+                <div class="content--row">
+                    <h4 class="content--title">Brown blazer</h4>
+                    <h4 class="content--price">$900</h4>
+                </div>
+                <div class="content--row brand--row">
+                    <p class="content-brand">Dagatha Blazer</p>
+                </div>
+                <div class="content--row">
+                    <p class="content--description">Brown blazer with soft material. 
+                        Available in various sizes. 
+                        Suitable for parties and other functions
+                    </p>
+                </div>
+                <div class="content--row buy--row">
+                    <button class="content--buy">Buy now</button>
+                    <button class="content--cart">
+                        <i class="fa fa-shopping-cart"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Product card 2 -->
+    <div class="card">
+        <div class="card--front">
+            <img class="front--img" src="./assets/men.jpeg" alt="Product Image 2">
+            <div class="front--price">$1400</div>
+        </div>
+        <div class="card--back">
+            <div class="card--content">
+                <div class="content--row">
+                    <h4 class="content--title">Brown blazer</h4>
+                    <h4 class="content--price">$1400</h4>
+                </div>
+                <div class="content--row brand--row">
+                    <p class="content-brand">Dagatha Blazer</p>
+                </div>
+                <div class="content--row">
+                    <p class="content--description">Brown blazer with soft material. 
+                        Available in various sizes. 
+                        Suitable for parties and other functions
+                    </p>
+                </div>
+                <div class="content--row buy--row">
+                    <button class="content--buy">Buy now</button>
+                    <button class="content--cart">
+                        <i class="fa fa-shopping-cart"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Product card 3 -->
+    <div class="card">
+        <div class="card--front">
+            <img class="front--img" src="./assets/kid.avif" alt="Product Image 2">
+            <div class="front--price">$800</div>
+        </div>
+        <div class="card--back">
+            <div class="card--content">
+                <div class="content--row">
+                    <h4 class="content--title">Brown blazer</h4>
+                    <h4 class="content--price">$800</h4>
+                </div>
+                <div class="content--row brand--row">
+                    <p class="content-brand">Dagatha Blazer</p>
+                </div>
+                <div class="content--row">
+                    <p class="content--description">Brown blazer with soft material. 
+                        Available in various sizes. 
+                        Suitable for parties and other functions
+                    </p>
+                </div>
+                <div class="content--row buy--row">
+                    <button class="content--buy">Buy now</button>
+                    <button class="content--cart">
+                        <i class="fa fa-shopping-cart"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
