Add glittery effect for product cards

--- a/ui/product-card/index.html
+++ b/ui/product-card/index.html
@@ -18,16 +18,15 @@
         <div class="card--back">
             <div class="card--content">
                 <div class="content--row">
-                    <h4 class="content--title">Brown blazer</h4>
+                    <h4 class="content--title">Green suit</h4>
                     <h4 class="content--price">$900</h4>
                 </div>
                 <div class="content--row brand--row">
-                    <p class="content-brand">Dagatha Blazer</p>
+                    <p class="content-brand">Dan suits</p>
                 </div>
                 <div class="content--row">
-                    <p class="content--description">Brown blazer with soft material. 
-                        Available in various sizes. 
-                        Suitable for parties and other functions
+                    <p class="content--description">Green suit with shiny material. 
+                        Available in various sizes. Suitable for parties and other functions
                     </p>
                 </div>
                 <div class="content--row buy--row">
@@ -80,14 +79,14 @@
         <div class="card--back">
             <div class="card--content">
                 <div class="content--row">
-                    <h4 class="content--title">Brown blazer</h4>
+                    <h4 class="content--title">Camo frock</h4>
                     <h4 class="content--price">$800</h4>
                 </div>
                 <div class="content--row brand--row">
-                    <p class="content-brand">Dagatha Blazer</p>
+                    <p class="content-brand">Doe kids collection</p>
                 </div>
                 <div class="content--row">
-                    <p class="content--description">Brown blazer with soft material. 
+                    <p class="content--description">Colorful frock with cotton material. 
                         Available in various sizes. 
                         Suitable for parties and other functions
                     </p>
