Understood browser level lazy loading of images

--- a/ui/lazy-load-images/index.html
+++ b/ui/lazy-load-images/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <img src="./assets/batman.jpeg" alt="Batman" loading="lazy">
+        <!-- <img src="./assets/batman.jpeg" alt="Batman" loading="lazy"> -->
     </div>
     <div class="wrapper">
         <img src="./assets/superman.avif" alt="Superman" loading="lazy">
