Create shell for button hover effects

--- a/animations/button_hover/index.html
+++ b/animations/button_hover/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button>Hover me</button>
+    <h2>Button hover effects</h2>
+    <div class="group border-effects">
+        <button>Hover me</button>
+        <button>Hover me</button>
+        <button>Hover me</button>
+    </div>
 </body>
 </html>
