Basic button glitter effect

--- a/animations/button_hover/index.html
+++ b/animations/button_hover/index.html
@@ -10,7 +10,13 @@
 <body>
     <h2>Button hover effects</h2>
     <div class="group border-effects">
-        <button>Hover me</button>
+        <button class="glitter">
+            <span>Hover me</span>
+            <svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
+                <polyline points="179,1 179,59 1,59 1,1 179, 1" class="bg-line"/>
+                <polyline points="179,1 179,59 1,59 1,1 179, 1" class="highlight-line"/>
+            </svg>
+        </button>
         <button>Hover me</button>
         <button>Hover me</button>
     </div>
