Create base layout

--- a/animations/card_carousel/index.html
+++ b/animations/card_carousel/index.html
@@ -10,13 +10,13 @@
   <body>
     <main class="container">
       <section class="carousel">
-        <div class="card"><span>1</span></div>
+        <!-- <div class="card"><span>1</span></div>
         <div class="card"><span>2</span></div>
         <div class="card"><span>3</span></div>
         <div class="card"><span>4</span></div>
         <div class="card"><span>5</span></div>
         <div class="card"><span>6</span></div>
-        <div class="card"><span>7</span></div>
+        <div class="card"><span>7</span></div> -->
       </section>
 
       <nav>
