Add multiple layers using z-index

--- a/animations/card_carousel/index.html
+++ b/animations/card_carousel/index.html
@@ -19,7 +19,7 @@
         <div class="card"><span>7</span></div> -->
       </section>
 
-      <nav>
+      <nav class="controls">
         <button onclick="goBackward()">&larr;</button>
         <button onclick="goForward()">&rarr;</button>
       </nav>
